<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_degrade_details_character"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/image_view_character"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_character"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_details"
        android:fontFamily="@font/inter_variable_slnt_wght"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/character"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_character" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_details"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_character" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_button"
        android:padding="8dp"
        android:text="@string/fechar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>